--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   background: #fff;
+  -webkit-font-smoothing: antialiased;
 }
 
 .container {
@@ -12,6 +13,11 @@ h3 {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #00cfc1;
+}
+
+h4 {
+	letter-spacing: 1px;
+	font-size: 20px;
 }
 
 h2 a {
@@ -39,7 +45,7 @@ h2 a:hover {
 
 #hero h1 {
   position: absolute;
-  top: 120px;
+  top: -25px;
   left: 5%;
   width: 90%;
   height:   300px;
@@ -70,15 +76,24 @@ h2 a:hover {
 #hero .photo {
 	background: url(../images/photo-grid.jpg) left top no-repeat;
 	background-size: cover;
-	height: 300px;
+	height: 140px;
 	position: absolute;
 	width: 100%;
 	top: 0;
 	right: 0;
 }
 
+#hero .photo a {
+	position: absolute;
+	bottom: -412px;
+	left: 5%;
+	margin: 0;
+	z-index: 20;
+	width: 90%;
+}
+
 #hero .column {
-  padding-top: 380px;
+  padding-top: 200px;
 }
 
 .divider {
@@ -196,7 +211,7 @@ text-align: center;
 #artist-info {
   background: #424345;
   color: #fff;
-  padding-top: 60px;
+  padding-top: 80px;
   padding-bottom: 120px;
 }
 
@@ -215,6 +230,14 @@ text-align: center;
 	text-align: center;
 }
 
+#artist-info .section-header {
+	text-align: center;
+}
+
+#artist-info .section-header h4 {
+	margin-bottom: 80px;
+}
+
 #artist-info .artist-info-section img {
     position: relative;
     z-index: 0;
@@ -225,6 +248,8 @@ text-align: center;
     top: 0;
     left: 0;
     display: none;
+    max-width: 300px;
+    border-radius: 300px;
 }
 
 #artist-info .artist-info-section .two {
@@ -245,6 +270,7 @@ margin-bottom: 40px;
 	margin-bottom: 10px;
 	margin-top: 0px;
 	display: inline-block;
+	color: #fff;
 }
 
 #artist-info .artist-info-section a {
@@ -322,38 +348,38 @@ margin-top: 0px;
 #footer {
 	background: #323335;
 	padding-top: 40px;
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 	color: rgba(255,255,255,.4);
-	font-size: 14px;
+	font-size: 12px;
 	text-align: center;
 }
 
-#footer a {
+#footer a.button {
 	color: #fff;
-	padding: 0;
-	border: 0;
-	color: rgba(255,255,255,.4);
-}
-
-#footer a:hover {
-	background: #00cfc1;
-	color: #fff;
+	margin: 0 0 40px 0;
+	width: 100%;
 }
 
 #footer a.back {
-	float: none;
-	display: inline-block;
-	margin-bottom: 20px;
-	padding: 12px 12px 10px 12px;
+	color: rgba(255,255,255,.3);
 	text-transform: uppercase;
-	border: 1px solid #00cfc1;
-	color:  #00cfc1;
-	font-size: 11px;
+	border: 0;
+	padding: 0;
+	margin: 0 auto;
 }
 
 #footer a.back:hover {
 	background: #00cfc1;
 	color: #fff;
+}
+
+#footer .logo-footer {
+	width: 83px;
+	height: 31px;
+	background: url(../images/logo-footer@2x.png) center center no-repeat;
+  	background-size: 83px 31px;
+  	text-indent: -9999px;
+  	margin: 0 auto 40px auto;
 }
 
 
@@ -375,7 +401,7 @@ margin-top: 0px;
 }
 
 #lineup .columns {
-	margin-bottom: 0px;
+	margin-bottom: 60px;
 	border-bottom: 0px solid rgba(0,0,0,.1);
 	padding-bottom: 0px;
 	text-align: left;
@@ -393,11 +419,6 @@ width: 200%;
   padding-top: 80px;
   padding-bottom: 80px;
   text-align: left;
-}
-
-#artist-info .artist-info-section img {
-	display: block;
-	border-radius: 300px;
 }
 
 #artist-info .artist-info-section h3 {
@@ -419,15 +440,6 @@ width: 200%;
   margin-bottom: 0px;
 }
 
-
-#footer {
-	text-align: left;
-}
-
-#footer a.back {
-	float: right;
-	margin-bottom: 0;
-}
 
 #artist-info .artist-info-section {
 	text-align: left;
@@ -452,7 +464,7 @@ width: 200%;
 
 #hero h1 {
   position: absolute;
-  top: -60px;
+  top: 20px;
   left: 0px;
   width: 100%;
 }
@@ -463,7 +475,7 @@ width: 200%;
 }
 
 #hero .column {
-  padding-top: 182px;
+  padding-top: 300px;
 }
 
 .divider a {
@@ -485,6 +497,16 @@ width: 200%;
 	width: 60%;
 }
 
+#hero .photo a {
+	position: absolute;
+	bottom: 40px;
+	left: 40px;
+	margin: 0;
+	color: #fff;
+	z-index: 20;
+	width: auto;
+}
+
 
 }
 
@@ -501,9 +523,6 @@ width: 200%;
 
 #hero .photo {
   height: 580px;
-}
-#hero .column {
-  padding-top: 222px;
 }
 
 
@@ -529,6 +548,51 @@ h4 {
 #more-details .logo-group {
   height:   200px;
   background-size: 250px auto;
+}
+
+}
+
+
+/* 960  ---------------------------------------*/
+@media (min-width: 960px) {
+	#lineup .columns {
+		margin-bottom: 0;
+	}
+
+	#artist-info .artist-info-section img {
+		display: block;
+	}
+
+
+#footer a.button {
+	color: #fff;
+	margin: 0;
+	width: 100%;
+}
+
+#footer a.back {
+	color: rgba(255,255,255,.3);
+	text-transform: uppercase;
+	border: 0;
+	padding: 0;
+	margin: 19px 0 0 0;
+	text-align: right;
+	display: inline-block;
+	float: right;
+}
+
+#footer a.back:hover {
+	background: #00cfc1;
+	color: #fff;
+}
+
+#footer .logo-footer {
+	width: 83px;
+	height: 31px;
+	background: url(../images/logo-footer@2x.png) center center no-repeat;
+  	background-size: 83px 31px;
+  	text-indent: -9999px;
+  	margin: 13px 0 0 0 ;
 }
 
 }
